# hms-scale

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  build_and_deploy.sh  config.json.example  hms-colada.service  hms-colada.service.example  vcpkg.json
.github/workflows/: build.yml
frontend/: angular.json  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.routes.ts  app.ts
frontend/src/app/components/body-comp-chart/: body-comp-chart.component.ts
frontend/src/app/components/metric-card/: metric-card.component.ts
frontend/src/app/components/weight-chart/: weight-chart.component.ts
frontend/src/app/models/: user.model.ts
frontend/src/app/pages/dashboard/: dashboard.component.ts
frontend/src/app/pages/habits/: habits.component.ts
frontend/src/app/pages/ml-panel/: ml-panel.component.ts
frontend/src/app/pages/settings/: settings.component.ts
frontend/src/app/pages/users/: user-dialog.component.ts  users.component.ts
frontend/src/app/services/: colada-api.service.ts  unit.service.ts
include/analytics/: HabitAnalyzer.h
include/ble/: BleScaleClient.h
include/calculation/: BIAFormulas.h  BodyCompositionCalculator.h
include/controllers/: ColadaController.h
include/database/: IScaleDatabase.h  PostgresScaleDatabase.h
include/identification/: HybridEngine.h
include/ml/: CrossValidator.h  DecisionTree.h  RandomForest.h  ScaleFeatureEngine.h  StandardScaler.h
include/models/: ScaleModels.h
include/mqtt/: DiscoveryPublisher.h  ScaleSubscriber.h
include/services/: MLTrainingService.h
include/utils/: AppConfig.h
src/: main.cpp
src/analytics/: HabitAnalyzer.cpp
src/ble/: BleScaleClient.cpp
src/calculation/: BodyCompositionCalculator.cpp
src/controllers/: ColadaController.cpp
src/database/: PostgresScaleDatabase.cpp
src/identification/: HybridEngine.cpp
src/ml/: DecisionTree.cpp  RandomForest.cpp  ScaleFeatureEngine.cpp
src/mqtt/: DiscoveryPublisher.cpp  ScaleSubscriber.cpp
src/services/: MLTrainingService.cpp
tests/: CMakeLists.txt  test_bia.cpp  test_database.cpp  test_habits.cpp  test_identification.cpp  test_ml.cpp  test_mqtt.cpp
